--- a/action.yaml
+++ b/action.yaml
@@ -5,3 +5,5 @@ runs:
   steps:
     - run: $GITHUB_ACTION_PATH/run.sh
       shell: bash
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
